2004-11-28  Andreas Madsack  <bolsog@users.sf.net>

	* MAJOR IMPROVEMENT: point-moving 
	  without interference with other points or curves
	* updated german (de.po) translations
	* changed toolbar-default to 'Icons only'
	* toolbar-style changeable in preferences
	* warning fixes in curves.c
	
2004-11-27  Andreas Madsack  <bolsog@users.sf.net>

	* test in LoadPar if File is a par-file
	* test in LoadPar if File has loops (nonlinear timevalues)
	* changing duration changes now maxim-value in all curves

2004-11-23  Andreas Madsack  <bolsog@users.sf.net>

	* bugfix in FileSave
	* added possibility to load filename as program-argument
	* added information-dialog
	* added directory-input support in LoadSave-Dialog
	
2004-11-22  Andreas Madsack  <bolsog@users.sf.net>

	* bug in ConfigInsertString resolved
	* klatt-entry field in preferences and events removed

2004-11-21  Andreas Madsack <bolsog@users.sf.net>

	* first Release (beta1)
	* including: 
	  - load/save parfiles
	  - internal wav-generating
	  - modelling-gui elements